# zephyr-app

./: CMakeLists.txt  Kconfig  bluenrg_zephyr_app.code-workspace  prj.conf
boards/arm/bluenrg_232/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  bluenrg_232.dts  bluenrg_232.yaml  bluenrg_232_defconfig  pinmux.c
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: CMakeLists.txt  clock_bluenrg.c  clock_bluenrg.h
drivers/gpio/: CMakeLists.txt  Kconfig  gpio_bluenrg.c  gpio_bluenrg.h
drivers/pinmux/: CMakeLists.txt  Kconfig  Kconfig.bluenrg  pinmux_bluenrg.c  pinmux_bluenrg.h
drivers/serial/: CMakeLists.txt  Kconfig  uart_bluenrg.c
drivers/zephyr/: CMakeLists.txt  Kconfig
drivers/zephyr/clock_control/: CMakeLists.txt  Kconfig.bluenrg  clock_bluenrg.c
drivers/zephyr/gpio/: Kconfig.bluenrg
drivers/zephyr/interrupt_controller/: CMakeLists.txt  intc_exti_bluenrg.c
drivers/zephyr/pinmux/: CMakeLists.txt  pinmux_bluenrg.c
drivers/zephyr/serial/: CMakeLists.txt  uart_bluenrg.c  uart_bluenrg.h
drivers/zephyr/spi/: CMakeLists.txt  Kconfig.bluenrg  spi_bluenrg.c  spi_bluenrg.h
dts/bindings/clock/: st,bluenrg-rcc.yaml
dts/bindings/flash_controller/: st,bluenrg-flash-controller.yaml
dts/bindings/serial/: st,bluenrg-uart.yaml
dts_root/dts/: Kconfig
external_bluenrg_soc_drivers/zephyr/: CMakeLists.txt  Kconfig  module.yml
hal_bluenrg/: CMakeLists.txt
hal_bluenrg/drivers/: CMakeLists.txt
hal_bluenrg/soc/: bluenrg_x_device.h  context_switch.s  system_bluenrg.h  system_bluenrg1.c
soc/: Kconfig
soc/arm/bluenrg/: Kconfig.soc  (+3 more)
src/: main.c
(+35 files in other folders)
